vlib/v/checker/tests/no_interface_str.out
vlib/v/checker/tests/no_interface_str.vv:8:5: notice: unused parameter: `c`
    6 | }
    7 | 
    8 | fn (c Cow) speak() {
      |     ^
    9 |     println('moo')
   10 | }
vlib/v/checker/tests/no_interface_str.vv:18:12: error: interface `Animal` does not have a .str() method. Use typeof() instead
   16 | fn moin() {
   17 |     a := get_animal()
   18 |     println(a.str())
      |               ~~~~~
   19 | }
